@@ -1369,6 +1369,7 @@ namespace MiniZinc {
         ASTString defines_var;
         Id* is_reverse_map;
         Id* promise_total;
+        Id* maybe_partial;
         ASTString doc_comment;
         ASTString is_introduced;
       } ann;
