@@ -19,4 +19,10 @@ namespace MiniZinc {
     env.createErrorStack();
   }
 
+  ResultUndefinedError::ResultUndefinedError(EnvI& env, const Location& loc, const std::string& msg)
+  : LocationException(env,loc,msg) {
+    if (env.in_maybe_partial==0)
+      env.addWarning("undefined result becomes false in Boolean context\n  ("+msg+")");
+  }
+  
 }
