@@ -8,6 +8,16 @@ https://github.com/MiniZinc/libminizinc/issues
 Version 2.0.12
 ==============
 
+Changes:
+
+ - Partial functions are now always evaluated in their Boolean context,
+   independent of whether they are par or var. If the result of a partial
+   function is statically known to be undefined (such as division by zero or
+   array access out of bounds), and it is used in a constraint expression,
+   this now results in a warning instead of an
+   error. Warnings can be turned off using the ::maybe_partial annotation.
+
+
 Bug fixes:
 
  - Fix a bug in the optimisation phase related to repeated simplification of
